# corio

./: .gitmodules  CMakeLists.txt
include/corio/: as_receiver.hpp  await_sender.hpp  channel.hpp  concepts.hpp  corio.hpp  deadline.hpp  intrusive_linked_list.hpp  io_uring.hpp  meta.hpp  spawn.hpp  stop_token.hpp  tag_invoke.hpp  then.hpp  thread_pool.hpp  wait.hpp
include/corio/io_uring/: base.hpp  cancel.hpp  read.hpp  schedule.hpp
src/: corio.cpp
